# repa

./: .~lock.tese.odt#  1.txt  CMakeCache.txt  CMakeLists.txt  Fonar.cpp  Fonar.h  Makefile  MyProg1  README.md  client_side.cpp  client_side.h  cmake_install.cmake  const.h  fdsf  main.cpp  server_side.cpp  server_side.h  title.cbp  untitled2.pro  widget.cpp
client_server/: .~lock.CMakeLists.txt#  CMakeCache.txt  CMakeLists.txt  Client0  Makefile  MyProgram.cbp  Server0  client-side.cpp  cmake_install.cmake  server-side.cpp
fisual/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  untitled1.pro  widget.cpp  widget.h  widget.ui
